seaqt/QtWidgets/gen_qspinbox.h

class QEvent;
class QMetaObject;
class QSpinBox;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QDoubleSpinBox QDoubleSpinBox;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSpinBox QSpinBox;
typedef struct QWidget QWidget;
bool QDoubleSpinBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDoubleSpinBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDoubleSpinBox_override_virtual_childEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDoubleSpinBox_override_virtual_customEvent(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_customEvent(void* self, QEvent* event);
bool QDoubleSpinBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDoubleSpinBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDoubleSpinBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QDoubleSpinBox_staticMetaObject();
void QDoubleSpinBox_delete(QDoubleSpinBox* self);