seaqt/QtWidgets/gen_qspinbox.nim

proc fQDoubleSpinBox_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QDoubleSpinBox_virtualbase_eventFilter".}
proc fcQDoubleSpinBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_eventFilter".}
proc fQDoubleSpinBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_childEvent".}
proc fcQDoubleSpinBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_childEvent".}
proc fQDoubleSpinBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_customEvent".}
proc fcQDoubleSpinBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_customEvent".}
proc fQDoubleSpinBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QDoubleSpinBox_virtualbase_connectNotify".}
proc fcQDoubleSpinBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_connectNotify".}
proc fQDoubleSpinBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QDoubleSpinBox_virtualbase_disconnectNotify".}
proc fcQDoubleSpinBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_disconnectNotify".}
proc fcQDoubleSpinBox_staticMetaObject(): pointer {.importc: "QDoubleSpinBox_staticMetaObject".}
proc fcQDoubleSpinBox_delete(self: pointer) {.importc: "QDoubleSpinBox_delete".}


func init*(T: type gen_qspinbox_types.QSpinBox, h: ptr cQSpinBox): gen_qspinbox_types.QSpinBox =
  T(h: h)
proc create*(T: type gen_qspinbox_types.QSpinBox, parent: gen_qwidget_types.QWidget): gen_qspinbox_types.QSpinBox =
  gen_qspinbox_types.QSpinBox.init(fcQSpinBox_new(parent.h))

proc create*(T: type gen_qspinbox_types.QSpinBox, ): gen_qspinbox_types.QSpinBox =
  gen_qspinbox_types.QSpinBox.init(fcQSpinBox_new2())

proc metaObject*(self: gen_qspinbox_types.QSpinBox, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQSpinBox_metaObject(self.h))

proc metacast*(self: gen_qspinbox_types.QSpinBox, param1: cstring): pointer =
  fcQSpinBox_metacast(self.h, param1)

proc metacall*(self: gen_qspinbox_types.QSpinBox, param1: cint, param2: cint, param3: pointer): cint =
  fcQSpinBox_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qspinbox_types.QSpinBox, s: cstring): string =
  let v_ms = fcQSpinBox_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc value*(self: gen_qspinbox_types.QSpinBox, ): cint =
  fcQSpinBox_value(self.h)

proc prefix*(self: gen_qspinbox_types.QSpinBox, ): string =
  let v_ms = fcQSpinBox_prefix(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setPrefix*(self: gen_qspinbox_types.QSpinBox, prefix: string): void =
  fcQSpinBox_setPrefix(self.h, struct_miqt_string(data: prefix, len: csize_t(len(prefix))))

proc suffix*(self: gen_qspinbox_types.QSpinBox, ): string =
  let v_ms = fcQSpinBox_suffix(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setSuffix*(self: gen_qspinbox_types.QSpinBox, suffix: string): void =
  fcQSpinBox_setSuffix(self.h, struct_miqt_string(data: suffix, len: csize_t(len(suffix))))

proc cleanText*(self: gen_qspinbox_types.QSpinBox, ): string =
  let v_ms = fcQSpinBox_cleanText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc singleStep*(self: gen_qspinbox_types.QSpinBox, ): cint =
  fcQSpinBox_singleStep(self.h)

proc setSingleStep*(self: gen_qspinbox_types.QSpinBox, val: cint): void =
  fcQSpinBox_setSingleStep(self.h, val)

proc minimum*(self: gen_qspinbox_types.QSpinBox, ): cint =
  fcQSpinBox_minimum(self.h)

proc setMinimum*(self: gen_qspinbox_types.QSpinBox, min: cint): void =
  fcQSpinBox_setMinimum(self.h, min)

proc maximum*(self: gen_qspinbox_types.QSpinBox, ): cint =
  fcQSpinBox_maximum(self.h)

proc setMaximum*(self: gen_qspinbox_types.QSpinBox, max: cint): void =
  fcQSpinBox_setMaximum(self.h, max)

proc setRange*(self: gen_qspinbox_types.QSpinBox, min: cint, max: cint): void =
  fcQSpinBox_setRange(self.h, min, max)

proc stepType*(self: gen_qspinbox_types.QSpinBox, ): cint =
  cint(fcQSpinBox_stepType(self.h))

proc setStepType*(self: gen_qspinbox_types.QSpinBox, stepType: cint): void =
  fcQSpinBox_setStepType(self.h, cint(stepType))

proc displayIntegerBase*(self: gen_qspinbox_types.QSpinBox, ): cint =
  fcQSpinBox_displayIntegerBase(self.h)

proc setDisplayIntegerBase*(self: gen_qspinbox_types.QSpinBox, base: cint): void =
  fcQSpinBox_setDisplayIntegerBase(self.h, base)

proc setValue*(self: gen_qspinbox_types.QSpinBox, val: cint): void =
  fcQSpinBox_setValue(self.h, val)

proc valueChanged*(self: gen_qspinbox_types.QSpinBox, param1: cint): void =
  fcQSpinBox_valueChanged(self.h, param1)

type QSpinBoxvalueChangedSlot* = proc(param1: cint)
proc miqt_exec_callback_QSpinBox_valueChanged(slot: int, param1: cint) {.exportc.} =
  let nimfunc = cast[ptr QSpinBoxvalueChangedSlot](cast[pointer](slot))
  let slotval1 = param1

  nimfunc[](slotval1)

proc onvalueChanged*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxvalueChangedSlot) =
  var tmp = new QSpinBoxvalueChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_connect_valueChanged(self.h, cast[int](addr tmp[]))

proc textChanged*(self: gen_qspinbox_types.QSpinBox, param1: string): void =
  fcQSpinBox_textChanged(self.h, struct_miqt_string(data: param1, len: csize_t(len(param1))))

type QSpinBoxtextChangedSlot* = proc(param1: string)
proc miqt_exec_callback_QSpinBox_textChanged(slot: int, param1: struct_miqt_string) {.exportc.} =
  let nimfunc = cast[ptr QSpinBoxtextChangedSlot](cast[pointer](slot))
  let vparam1_ms = param1
  let vparam1x_ret = string.fromBytes(toOpenArrayByte(vparam1_ms.data, 0, int(vparam1_ms.len)-1))
  c_free(vparam1_ms.data)
  let slotval1 = vparam1x_ret

  nimfunc[](slotval1)

proc ontextChanged*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxtextChangedSlot) =
  var tmp = new QSpinBoxtextChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_connect_textChanged(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qspinbox_types.QSpinBox, s: cstring, c: cstring): string =
  let v_ms = fcQSpinBox_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qspinbox_types.QSpinBox, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQSpinBox_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc QSpinBoxmetaObject*(self: gen_qspinbox_types.QSpinBox, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fQSpinBox_virtualbase_metaObject(self.h))

type QSpinBoxmetaObjectProc* = proc(): gen_qobjectdefs_types.QMetaObject
proc onmetaObject*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxmetaObjectProc) =
  # TODO check subclass
  var tmp = new QSpinBoxmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QSpinBox_metaObject(self: ptr cQSpinBox, slot: int): pointer {.exportc: "miqt_exec_callback_QSpinBox_metaObject ".} =
  var nimfunc = cast[ptr QSpinBoxmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QSpinBoxmetacast*(self: gen_qspinbox_types.QSpinBox, param1: cstring): pointer =
  fQSpinBox_virtualbase_metacast(self.h, param1)

type QSpinBoxmetacastProc* = proc(param1: cstring): pointer
proc onmetacast*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxmetacastProc) =
  # TODO check subclass
  var tmp = new QSpinBoxmetacastProc
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QSpinBox_metacast(self: ptr cQSpinBox, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QSpinBox_metacast ".} =
  var nimfunc = cast[ptr QSpinBoxmetacastProc](cast[pointer](slot))
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QSpinBoxmetacall*(self: gen_qspinbox_types.QSpinBox, param1: cint, param2: cint, param3: pointer): cint =
  fQSpinBox_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QSpinBoxmetacallProc* = proc(param1: cint, param2: cint, param3: pointer): cint
proc onmetacall*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxmetacallProc) =
  # TODO check subclass
  var tmp = new QSpinBoxmetacallProc
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QSpinBox_metacall(self: ptr cQSpinBox, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QSpinBox_metacall ".} =
  var nimfunc = cast[ptr QSpinBoxmetacallProc](cast[pointer](slot))
  let slotval1 = cint(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](slotval1, slotval2, slotval3 )

  virtualReturn
proc QSpinBoxevent*(self: gen_qspinbox_types.QSpinBox, event: gen_qcoreevent_types.QEvent): bool =
  fQSpinBox_virtualbase_event(self.h, event.h)

type QSpinBoxeventProc* = proc(event: gen_qcoreevent_types.QEvent): bool
proc onevent*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxeventProc) =
  # TODO check subclass
  var tmp = new QSpinBoxeventProc
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QSpinBox_event(self: ptr cQSpinBox, slot: int, event: pointer): bool {.exportc: "miqt_exec_callback_QSpinBox_event ".} =
  var nimfunc = cast[ptr QSpinBoxeventProc](cast[pointer](slot))
  let slotval1 = gen_qcoreevent_types.QEvent(h: event)


  let virtualReturn = nimfunc[](slotval1 )

  virtualReturn
proc QSpinBoxvalidate*(self: gen_qspinbox_types.QSpinBox, input: string, pos: ptr cint): cint =
  cint(fQSpinBox_virtualbase_validate(self.h, struct_miqt_string(data: input, len: csize_t(len(input))), pos))

type QSpinBoxvalidateProc* = proc(input: string, pos: ptr cint): cint
proc onvalidate*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxvalidateProc) =
  # TODO check subclass
  var tmp = new QSpinBoxvalidateProc
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_override_virtual_validate(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QSpinBox_validate(self: ptr cQSpinBox, slot: int, input: struct_miqt_string, pos: ptr cint): cint {.exportc: "miqt_exec_callback_QSpinBox_validate ".} =
  var nimfunc = cast[ptr QSpinBoxvalidateProc](cast[pointer](slot))
  let vinput_ms = input
  let vinputx_ret = string.fromBytes(toOpenArrayByte(vinput_ms.data, 0, int(vinput_ms.len)-1))
  c_free(vinput_ms.data)
  let slotval1 = vinputx_ret

  let slotval2 = pos


  let virtualReturn = nimfunc[](slotval1, slotval2 )

  cint(virtualReturn)
proc QSpinBoxvalueFromText*(self: gen_qspinbox_types.QSpinBox, text: string): cint =
  fQSpinBox_virtualbase_valueFromText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

type QSpinBoxvalueFromTextProc* = proc(text: string): cint
proc onvalueFromText*(self: gen_qspinbox_types.QSpinBox, slot: QSpinBoxvalueFromTextProc) =
  # TODO check subclass
  var tmp = new QSpinBoxvalueFromTextProc
  tmp[] = slot
  GC_ref(tmp)
  fcQSpinBox_override_virtual_valueFromText(self.h, cast[int](addr tmp[]))
